--- a/themes/meteor/_config.yml
+++ b/themes/meteor/_config.yml
@@ -65,7 +65,7 @@ valine:
   appId: LQcg6cueG8cMcLf9gSrAhF6d-gzGzoHsz
   appKey: zAMFPgKrAh09qqQDGHvdU0Uq
   notify: true
-  placeholder: 等一个人，还是等一个故事？\\n🍇🍈🍉🍊🍋🍌🍍🍎🍏🍐🍑🍒🍓🥝🍅
+  placeholder: 等一个人，还是等一个故事？\n🍇🍈🍉🍊🍋🍌🍍🍎🍏🍐🍑🍒🍓🥝🍅
   avatar: robohash
   
 
